--- a/assets/partials/_mixins.scss
+++ b/assets/partials/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin floating ($radius:10px,$shadow:gray,$bordo:black){
+@mixin floatign ($radius:10px,$shadow:gray,$bordo:black){
     border-radius:$radius ;
     box-shadow: 3px 3px 8px  $shadow;
     border: 2px solid $bordo;
